--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "4.6.0",
+    "bootstrap-vue": "2.21.1",
     "core-js": "^3.8.3",
     "graphql-request": "^4.2.0",
     "register-service-worker": "^1.7.2",
